fix the integration test to match the response tasks refactor production and test code